# BLIP-TimeSformer

./: .gitignore  check_data.ipynb  copy_videos.py  create_small_coco.py  demo.ipynb  eval_retrieval_video.ipynb  eval_retrieval_video.py  eval_tsf_retrieval_video.ipynb  fix_coco_annotation.py  pyproject.toml  train_blip_tsf_retrieval.py  train_blip_tsf_video_retrieval.py
configs/: retrieval_coco.yaml  retrieval_msrvtt.yaml  retrieval_msrvtt_test.yaml  retrieval_msrvtt_test_blip.yaml  retrieval_msrvtt_train.yaml
data/: video_dataset.py
models/: blip.py  blip_tsf_retrieval.py  vit.py
timesformer/models/: vit.py  vit_utils.py
